fix: Align nav items better to the centre

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -495,6 +495,8 @@ progress {
 .nav__toggle-input:checked ~ .nav__group {
 	display: block;
 	margin-top: 3rem;
+	padding-left: 30%;
+	padding-right: 30%;
 }
 
 .video-wrapper {
